deploy/deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: maguro
  namespace: bot
spec:
  replicas: 1
  template:
    metadata:
      name: maguro
      labels:
        app: maguro
      namespace: bot
    spec:
      containers:
      - name: maguro
        image: vivit/maguro:11
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
          name: http
          protocol: TCP
        resources:
          requests:
            memory: 16Mi
            cpu: 20m
          limits:
            memory: 32Mi
            cpu: 40m
      imagePullSecrets:
      - name: dockerhub-vivit
