deploy/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: maguro
  labels:
    app: maguro
  namespace: bot
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 3010
    protocol: TCP
    targetPort: 3000
  selector:
    app: maguro
